--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,13 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
-  provider: ^2.0.1+1
+  settings_ui: ^0.2.0
+  font_awesome_flutter: ^8.5.0
+  rxdart: ^0.23.0
+  shared_preferences: ^0.5.4+8
+  provider: ^4.0.0
+  http: ^0.12.0+2
+  url_launcher:
 
 dev_dependencies:
   flutter_test:
